remove welcome pop-up
